Add comprehensive tests for graph builder components and visualization
- Implement tests for TemporalGraphBuilder to validate graph construction, progression metrics, and feature extraction.
- Enhance TestTreatmentSimulator with detailed assertions for treatment encoding.
- Introduce tests for UnifiedGraphBuilder, covering graph creation, feature addition, and patient summary generation.
- Add tests for GraphVisualizer to ensure proper visualization of knowledge graphs and tumor progression using both Plotly and Matplotlib.
- Create tests for ExplainableGliomaTreatment to validate treatment prediction explanations and comparisons.
- Ensure all tests include necessary setup and teardown procedures for a clean testing environment.

--- a/susruta/pyproject.toml
+++ b/susruta/pyproject.toml
@@ -11,7 +11,7 @@ license = { file = "LICENSE" }
 authors = [
     { name = "SUSRUTA Contributors" } # Updated author
     # Add specific authors if desired:
-    # { name = "Your Name", email = "your.email@example.com" }
+    # { name = "Satya Pratheek TATA", email = "satyapratheek.tata@edhec.com" }
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
