--- a/susruta/pyproject.toml
+++ b/susruta/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "matplotlib>=3.6.0",
     "scikit-learn>=1.1.0",
     "psutil>=5.9.0",
+    "nibabel>=4.0.0",
     "openpyxl>=3.0.0", # For Excel reading/writing
 ]
 
